# Polymarket_vs_Kalshi

./: .dockerignore  .gitignore  Dockerfile  Kalshi vs Polymarket 候选对.xlsx  README.md  config.example.json  config.json  pyproject.toml
docs/: Polymarket vs. Kalshi 套利监控系统 PRD.md
src/: clients.py  kalshi_api.py  logger_setup.py  models.py  monitor.py  monitor_windows.py  polymarket_api.py  read_excel_config.py  read_excel_config2.py  state.py
src/utils/: alerting.py  base_client.py  config_loader.py  fees.py  kalshi_client.py  logger.py  polymarket_client.py  spreads.py  state_manager.py  terminal_ui.py
