[project]
name = "polymarket-vs-kalshi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.2",
    "kalshi-python>=2.1.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "py-clob-client>=0.25.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
]
